# python-hcl2

./: .codacy.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .remarkrc  .travis.yml  .yamllint.yml  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  catalog-info.yaml  mypy.ini  package-lock.json  package.json  pylintrc  pyproject.toml  requirements.pip  requirements.txt  setup.cfg  setup.py  test-requirements.pip  test-requirements.txt  tox.ini  tree-to-hcl2-reconstruction.md
.github/ISSUE_TEMPLATE/: hcl2-parsing-error.md
.github/workflows/: codeql-analysis.yml  dependencies_check.yml  main.yml  pr.yml  pr_check.yml  publish.yml  security.yml  test-build-publish.yml  test.yml
cli/: hcl_to_json.py  helpers.py  hq.py  json_to_hcl.py
docs/: 01_getting_started.md  02_querying.md  03_advanced_api.md  04_hq.md  05_hq_examples.md  06_migrating_to_v8.md  usage.md
hcl2/: __init__.py  __main__.py  api.py  builder.py  const.py  deserializer.py  dict_transformer.py  editor.py  formatter.py  hcl2.lark  indenter.py  lark_parser.py  lark_version.py  parser.py  postlexer.py  processor.py  reconstructor.py  rule_transformer.py  serialization.py  transformer.py  utils.py  version.py  walk.py
hcl2/query/: __init__.py  _base.py  attributes.py  blocks.py  body.py  builtins.py  containers.py  diff.py  expressions.py  for_exprs.py  functions.py  introspect.py  path.py  pipeline.py  predicate.py  resolver.py  safe_eval.py
hcl2/rule_transformer/: deserializer.py  formatter.py  hcl2.lark  json.py  reconstructor.py  transformer.py  utils.py
hcl2/rule_transformer/rules/: abstract.py  base.py  containers.py  expression.py  expressions.py  for_expressions.py  functions.py  indexing.py  literal_rules.py  strings.py  token_sequence.py  tokens.py  tree.py  whitespace.py
hcl2/rules/: abstract.py  base.py  containers.py  directives.py  expressions.py  for_expressions.py  functions.py  indexing.py  literal_rules.py  strings.py  tokens.py  whitespace.py
python_hcl2/: __init__.py  version.py
reports/: .gitignore
test/: __init__.py
test/helpers/: __init__.py  hcl2_helper.py
test/helpers/terraform-config/: a.tf  backend.tf  bad_multiline_comments.tf  bad_multiline_comments_2.tf  bad_tf_quotes.tf  blocks.tf  cloudwatch.tf  comments.tf  data_sources.tf  empty-heredoc.hcl2  escapes.tf  heradoc2.tf  heredoc.tf  iam.tf  invalid_heredoc.tf  invalid_quotes_within_quotes.tf  invalid_unenclosed_quotes.tf  locals_embedded_condition.tf  locals_embedded_function.tf  locals_embedded_interpolation.tf  locals_embedded_multi_function_nested.tf  locals_embedded_nested_interpolation.tf  multi_level_interpolation.tf  multiline_expressions.tf  null_provider.tf  nulls.tf  provider_function.tf  (+10 more)
test/helpers/terraform-config-json/: a.json  backend.json  blocks.json  cloudwatch.json  comments.json  data_sources.json  empty-heredoc.json  escapes.json  heradoc.json  heradoc2.json  iam.json  locals_embedded_condition.json  locals_embedded_function.json  locals_embedded_interpolation.json  locals_embedded_multi_function_nested.json  locals_embedded_nested_interpolation.json  multi_level_interpolation.json  multiline_expressions.json  null_provider.json  nulls.json  provider_function.json  resource_for_attribute.json  resource_in_attribute.json  resource_keyword_attribute.json  route_table.json  s3.json  string_interpolations.json  string_literals.json  test_floats.json  unicode_strings.json  variables.json  vars.auto.json
test/integration/: test_cli_subprocess.py  test_round_trip.py  test_specialized.py
test/round_trip/: test_round_trip.py
test/unit/: __init__.py  simple_passing_test.py  test_api.py  test_builder.py  test_complex_floats.py  test_deserializer.py  test_dict_transformer.py  test_formatter.py  test_hcl2_syntax.py  test_load.py  test_load_with_meta.py  test_parse.py  test_postlexer.py  test_reconstruct.py  test_reconstruct_ast.py  test_reconstruct_dict.py  test_reconstructor.py  test_unicode_strings.py  test_utils.py  test_walk.py
(+78 files in other folders)
