[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "python-hcl2"
authors = [{name = "Amplify Education", email = "github@amplify.com"}]
license = {text = "MIT"}
description = "A parser for HCL2"
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.7.0"
dependencies = ["lark>=1,<2"]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/amplify-education/python-hcl2"

[project.scripts]
hcl2tojson = "hcl2.__main__:main"

[tool.setuptools]
packages = ["hcl2"]
zip-safe = false
include-package-data = true

[tool.setuptools_scm]
write_to = "hcl2/version.py"
