[metadata]
name = python-hcl2
version = attr: hcl2.version:__version__
author = Amplify Education
author_email = github@amplify.com
license = MIT
description = A parser for HCL2
keywords =
url = https://github.com/amplify-education/python-hcl2
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = hcl2
zip_safe = False
install_requires = lark>=0.10.0,<0.11.0;
include_package_data = True
python_requires = >=3.6.0
scripts = bin/hcl2tojson
test_suite = nose.collector
